--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 tokio = { version = "1.2.0", features = ["full"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 simple-error = "0.2.3"
+clap = "3.0.0-beta.2"
