fix(ghactions): disabled rust 2015 checks

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -50,6 +50,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v3
         env:
+          VALIDATE_RUST_2015: false
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_MARKDOWN: false
           DEFAULT_BRANCH: master
