feat: cache integrated

--- a/securum_exire_sever/Cargo.toml
+++ b/securum_exire_sever/Cargo.toml
@@ -14,3 +14,6 @@ hotwatch = "0.4.5"
 futures-util = "0.3.13"
 tokio = "1.4.0"
 futures = "0.3.13"
+ring = "0.17.0-alpha.10"
+data-encoding = "2.3.2"
+redis = "0.20.1"
