--- a/securum_exire_sever/Cargo.toml
+++ b/securum_exire_sever/Cargo.toml
@@ -17,3 +17,5 @@ futures = "0.3.13"
 ring = "0.17.0-alpha.10"
 data-encoding = "2.3.2"
 redis = "0.20.1"
+reqwest = { version = "0.11", features = ["json"]}
+serde = "1.0.126"
