--- a/securum_exire_sever/Cargo.toml
+++ b/securum_exire_sever/Cargo.toml
@@ -16,6 +16,7 @@ tokio = "1.4.0"
 futures = "0.3.13"
 ring = "0.17.0-alpha.10"
 data-encoding = "2.3.2"
-redis = "0.20.1"
+redis = { version = "0.20.2", features = ["tokio-comp"] }
 reqwest = { version = "0.11", features = ["json"]}
 serde = "1.0.126"
+md5 = "0.7.0"
