--- a/securum_exire_sever/Cargo.toml
+++ b/securum_exire_sever/Cargo.toml
@@ -20,3 +20,4 @@ redis = { version = "0.20.2", features = ["tokio-comp"] }
 reqwest = { version = "0.11", features = ["json"]}
 serde = "1.0.126"
 md5 = "0.7.0"
+colour = "0.6.0"
