--- a/securum_exire_sever/Cargo.toml
+++ b/securum_exire_sever/Cargo.toml
@@ -21,3 +21,6 @@ reqwest = { version = "0.11", features = ["json"]}
 serde = "1.0.126"
 md5 = "0.7.0"
 colour = "0.6.0"
+toml = "0.5.8"
+serde_derive = "1.0.126"
+regex = "1.5.4"
