fix: typo project name

--- a/securum_exire_sever/Cargo.toml
+++ b/securum_exire_sever/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "securum_exire_sever"
-version = "0.1.0"
+name = "securum_exire_server"
+version = "0.1.5"
 authors = ["Mayank Kumar <mayank22oct@gmail.com>"]
 edition = "2018"
 
