fix: fixed github actions

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -36,7 +36,7 @@ jobs:
     ##################
     steps:
       - name: install dependencies
-      - run: sudo apt update && sudo apt -u upgrade && sudo apt install -y gcc g++
+        run: sudo apt update && sudo apt -u upgrade && sudo apt install -y gcc g++
       ##########################
       # Checkout the code base #
       ##########################
